assets/css/style.css
@font-face {
    font-family: "Futura";
    src:
     url("../fonts/futura-medium.woff") format("woff"),
        url("../fonts/futura-medium.woff2") format("woff2"),
        url("../fonts/futura-medium.ttf") format("truetype");
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');

/* Background images */

html {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }

.home-bg {
    background: url(/assets/images/home_bg.jpeg) no-repeat center center fixed; 
}

.hours-bg {
    background: url(/assets/images/hours_bg.png) no-repeat center center fixed; 
}

.transparentBG {
    background-color: rgba(0,0,0,0);
}

#wrapper {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
/* Footer positioning */

body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }

  main {
    flex: 1 0 auto;
  }


/* Inline list positioning */

.list-inline {
    padding-left: 0;
    margin-left: -5px;
    list-style: none;
  }
  .list-inline > li {
    display: inline-block;
    padding-right: 5px;
    padding-left: 5px;
  }

/*
------------------------------------------
Fonts
------------------------------------------
*/

.font-futura {
    font-family: "futura-medium", sans-serif;
}

.font-roboto {
    font-family: "Roboto", sans-serif;
}

/* Text shadows */

.text-shadow {
    text-shadow: 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.5);
}

/*
------------------------------------------
Logo
------------------------------------------
*/

.logo {
    margin-top: 3.125rem;
}


/* .logo {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}  */

.temaki-logo {
    height: 100%;
    width: 100%;
    margin-bottom: -50px;
}

/*
------------------------------------------
Address
------------------------------------------
*/

.address {
    margin-top: 1.25rem;
}

.address p {
    margin: 0.3125rem 0 0.3125rem 0
}

/*
------------------------------------------
Hours
------------------------------------------
*/

.hours-days {
    margin-bottom: 0.3125rem;
}

.hours-times {
    margin-top: 0.3125rem;
}

/*
------------------------------------------
Contact Us
------------------------------------------
*/

.email-link a {
    color: #f44336;
}

.email-link a:hover {
    color: #b71c1c;
}

/*
------------------------------------------
Buttons
------------------------------------------
*/

.buttons {
    margin-bottom: 180px;
}



.btn-large {
    width: 12.5rem;
    margin: 20px 10px 20px 10px
}

.btn-large:hover {
    color: #fff !important;
}

/*
------------------------------------------
Footer
------------------------------------------
*/

.footer-social-links {
    margin: 0;
    font-size: 2.5rem;
}

.page-footer{
    padding: 0;
}


.footer-copyright {
    margin-left: 0.625rem
}

.bigScreen {
    display: none;
}

.smallMedScreen {
    display: block;
}

/* ---------------------------------------------------Media queries */

/* >600px - Materialize Tablet devices (m) */

@media screen and (min-width: 601px) {

    .temaki-logo {
        height: 75%;
        width: 75%;
    }



}

/* >992px - Materialize Desktop devices (l) */

@media screen and (min-width: 992px) {

    .temaki-logo {
        height: 100%;
        width: 100%;
    }

    .bigScreen {
        display: block;
    }
    
    .smallMedScreen {
        display: none;
    }

    .temaki-logo {
        padding-right: 53px;
   }
}


/* >1200px - Materialize Large Desktop devices (l) */

@media screen and (min-width: 1200px) {

}

